argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  tls:
    - hosts:
      - argocd.aaronschweig.dev
      secretName: argocd-aaronschweig-dev
  rules:
  - host: argocd.aaronschweig.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
